styling changes and login changes

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
+  background: linear-gradient(to right, #12c2e9, #dcd9dd, #ffffff);
 }
 
 .wrapper {
