--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,14 @@
 .active{
     color:rgb(173, 166, 166)
   }
+  .post-content {
+    display: none;
+    overflow: hidden;
+    height: 0;
+    transition: height 0.3s ease;
+  }
+  
+  .post-content.active {
+    display: block;
+    height: auto;
+  }
